objects/Netting_Group__c.object
<CustomObject>
    <fields>
        <fullName>Cross_Counterparty__c</fullName>
        <label>Cross Counterparty</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cross_Product__c</fullName>
        <label>Cross Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Netting Across all Products</fullName>
                </value>
                <value>
                    <fullName>Netting Across the same Product</fullName>
                </value>
                <value>
                    <fullName>Netting Across specific Transactions with specified Transactions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matter_Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter/Deal</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Netting Groups</relationshipLabel>
        <relationshipName>Netting_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Across_Bank__c</fullName>
        <label>Net Across Bank</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Across_Counterparty__c</fullName>
        <label>Net Across Counterparty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Netting_Strength__c</fullName>
        <label>Netting Strength</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Netting_Type__c</fullName>
        <label>Netting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Close Out</fullName>
                </value>
                <value>
                    <fullName>Novation</fullName>
                </value>
                <value>
                    <fullName>Settlement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Netting Group</label>
    <nameField>
        <displayFormat>NG-{0000}</displayFormat>
        <label>Netting Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Netting Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>